# dynamic-gui-app

./: CMakeLists.txt  README.md
Documentation/: Coding Standard.docx
gui_app/: CMakeLists.txt  files.cmake
gui_app/common/inc/: stdafx.h
gui_app/common/src/: main.cpp
gui_app/config_files/: gui_app.json
gui_app/src/common/inc/: button_widget.h  command_line_parser.h  custom_types.h  dynamic_gui.h  gui_window.h  slider_widget.h  stdafx.h  text_widget.h  widget_interface.h
gui_app/src/common/src/: button_widget.cpp  command_line_parser.cpp  dynamic_gui.cpp  gui_window.cpp  main.cpp  slider_widget.cpp  text_widget.cpp
gui_protocol_lib/: CMakeLists.txt  files.cmake
gui_protocol_lib/inc/: gui_client_api.h  gui_server_api.h
gui_protocol_lib/src/: gui_client_api.cpp  gui_server_api.cpp
property_gatherer/: CMakeLists.txt
property_gatherer/apps/: CMakeLists.txt
property_gatherer/apps/property_consumer/: CMakeLists.txt  files.cmake
property_gatherer/apps/property_consumer/src/common/inc/: property_consumer.h  stdafx.h
property_gatherer/apps/property_consumer/src/common/src/: main.cpp  property_consumer.cpp
property_gatherer/apps/property_producer/: CMakeLists.txt  files.cmake
property_gatherer/apps/property_producer/src/common/inc/: stdafx.h
property_gatherer/apps/property_producer/src/common/src/: main.cpp
shared/common/inc/: common_functions.h  thread_safe_queue.h  transport_factory.h  transport_interface.h
shared/common/src/: common_functions.cpp
shared/platform/linux/inc/: linux_platform_functions.h  linux_udp_transport.h
shared/platform/linux/src/: linux_platform_functions.cpp  linux_udp_transport.cpp
shared/platform/windows/inc/: windows_udp_transport.h
shared/platform/windows/src/: windows_udp_transport.cpp
